fix text wrapping

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -12,6 +12,7 @@
 
 .site-header .site-title {
   font-size: $h2;
+  margin-top: $space-2;
 }
 
 .site-nav {
